test/files/neg/macro-blackbox-extractor.check
Test_2.scala:3: error: extractor macros can only be whitebox
    case Extractor(x) => println(x)
                  ^
one error found
